--- a/download_data_script.ipynb
+++ b/download_data_script.ipynb
@@ -1767,8 +1767,6 @@
    "outputs": [],
    "source": [
     "# CHUNKING CODE CONTINUED\n",
-    "# Select buildings based on countries  \n",
-    "target_country_code = 'NG' # INSERT COUNTRY CODE HERE\n",
     "# Which Hemisphere is the building in.\n",
     "lon_list = []\n",
     "for lon in range(0,180,10): # ADJUST HERE FOR DIFFERENT HEMISPHERE\n",
@@ -1778,18 +1776,23 @@
     "for lat in range(0,90,10):  # ADJUST HERE FOR DIFFERENT HEMISPHERE\n",
     "    lat_list.append((lat, lat + 10))\n",
     "\n",
-    "for lat_min, lat_max in lat_list:\n",
-    "    for lon_min, lon_max in lon_list:\n",
-    "        input_file = fr'C:\\Users\\karim\\OneDrive\\Documents\\Propeterra_Data\\Joined_Buildings_Commercial_30m_NE_Hemisphere\\buildings_{lon_min}_{lat_min}_{lon_max}_{lat_max}.geojson'\n",
+    "# Select buildings based on countries  \n",
+    "for target_country in countries_dict:\n",
     "\n",
-    "        buildings = gpd.read_file(input_file)\n",
+    "    country_name = str(countries_dict[target_country])\n",
     "\n",
-    "        # Only keep buildings in the target country\n",
-    "        buildings_in_country = buildings[buildings['country'] == target_country_code]\n",
-    "        output_dir = fr'C:\\Users\\karim\\OneDrive\\Documents\\Propeterra_Data\\Buildings_{target_country_code}'\n",
-    "        if not buildings_in_country.empty:\n",
-    "                output_file = os.path.join(output_dir, f'buildings_{target_country_code}.geojson')\n",
-    "                buildings_in_country.to_file(output_file, driver='GeoJSON')"
+    "    for lat_min, lat_max in lat_list:\n",
+    "        for lon_min, lon_max in lon_list:\n",
+    "            input_file = fr'C:\\Users\\karim\\OneDrive\\Documents\\Propeterra_Data\\Joined_Buildings_Commercial_30m_NE_Hemisphere\\buildings_{lon_min}_{lat_min}_{lon_max}_{lat_max}.geojson'\n",
+    "\n",
+    "            buildings = gpd.read_file(input_file)\n",
+    "\n",
+    "            # Only keep buildings in the target country\n",
+    "            buildings_in_country = buildings[buildings['country'] == target_country]\n",
+    "            output_dir = fr'C:\\Users\\karim\\OneDrive\\Documents\\Propeterra_Data\\Buildings'\n",
+    "            if not buildings_in_country.empty:\n",
+    "                    output_file = os.path.join(output_dir, f'buildings_{country_name}.geojson')\n",
+    "                    buildings_in_country.to_file(output_file, driver='GeoJSON')"
    ]
   },
   {
